<resources>
    <string name="app_name">New projet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="Enregistrer_text">Enregistrer</string>
    <string name="Email_text">Email</string>
    <string name="Password_text">Password</string>
    <string name="Username_text">Username</string>
    <string name="FullName_text">FullName</string>
    <string name="Birthday_text">Your Birthday</string>


    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>